--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="Manifest.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="Manifest.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
 
     <application
         android:name=".ApplicationClass"
