--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         tools:targetApi="31">
         <activity
             android:name=".UI.Activity.EntryActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
 
         <activity
