--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
     <uses-permission android:name="Manifest.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
-
     <application
         android:name=".ApplicationClass"
         android:allowBackup="true"
@@ -26,10 +25,15 @@
         android:theme="@style/Theme.Split"
         tools:targetApi="31">
         <activity
-            android:name=".UI.Activity.EntryActivity"
-            android:windowSoftInputMode="adjustPan"
+            android:name=".UI.Activity.CurrencyType"
             android:exported="false" />
-
+        <activity
+            android:name=".UI.Activity.OnBoardingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UI.Activity.EntryActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".UI.Activity.Login"
             android:exported="false" />
