--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         android:theme="@style/Theme.Split"
         tools:targetApi="31">
         <activity
+            android:name=".UI.Activity.ForgotPassword"
+            android:exported="false" />
+        <activity
             android:name=".UI.Activity.OnBoardingActivity"
             android:exported="false" />
         <activity
